[package]
name = "rust-test"
version = "0.1.0"
authors = ["Spiral Palmer <spiral.palmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parceljs = { git = "https://github.com/SpiralP/rust-parceljs.git", branch = "test" }
